# tabs-desktop-app

./: package.json
src/: App.tsx
src-tauri/: Cargo.toml  db.sqlite  tauri.conf.json
src-tauri/src/: main.rs
src/api/: users.ts
src/components/Auth/: Auth.tsx
src/components/Layout/: LayoutWrapper.tsx
src/components/Menu/: Menu.tsx
src/components/Spinner/: Spinner.css  Spinner.tsx
src/components/TabsWrapper/: TabsWrapper.tsx
src/components/TabsWrapper/Tab/: Tab.tsx  TabItemForm.tsx
src/components/TabsWrapper/TabItemForm/: TabItemForm.tsx
